----------------------------------------------------------------------
 OmegaT 2.5.2
----------------------------------------------------------------------
   5 Enhancements
   1 Bug fix
   4 Localisation updates
----------------------------------------------------------------------
2.5.2 vs. 2.5.1 update 1

  Implemented requests:

  - Show non-breakable space
  http://sourceforge.net/support/tracker.php?aid=3495779

  - Use search term as window title in Search window
  http://sourceforge.net/support/tracker.php?aid=2610094

  Other enhancements:

  - Add explanatory messages to windows as hints when a project is not open

  - Segments containing a note can be marked with View > 
Mark Segments with Notes. This marking has priority over Mark Translated
and Mark Untranslated.

  - Display of the corresponding colours in the View menu for "Mark" 
menu entries

  Bug fixes:

  - In the PO filter, "path" was always displayed in the Comment pane, 
even if it was empty

  Localisation updates:

  - Simplified Chinese localisation updated to 2.5.0 (UI, readme, documentation)
  - Italian localisation updated to 2.5.1 (UI)
  - Dutch localisation updated to 2.5.1 (UI)
  - Japanese localisation updated to 2.5.1 (UI)

----------------------------------------------------------------------
 OmegaT 2.5.1 update 1
----------------------------------------------------------------------
   2 Enhancements
   2 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
2.5.1 update 1 vs. 2.5.1 

  Implemented requests:

  - Console: more context on error message "Failed to load..."
  http://sourceforge.net/support/tracker.php?aid=3465220

  - Navigate to next/previous segment with a note
  http://sourceforge.net/support/tracker.php?aid=3484729

  Bug fixes:

  - Remove Tags can create a corrupted target document
  http://sourceforge.net/support/tracker.php?aid=3487497

  - After "save" the cursor goes to the head of the segment